--- a/www.nass.gov.ng/3950405c82ff0669a225adfad072807811f99310.yml
+++ b/www.nass.gov.ng/3950405c82ff0669a225adfad072807811f99310.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 11:04:30 GMT
+    - Tue, 14 Aug 2018 00:25:21 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=pxfFmwegzbuTK1Ho3xxg-3; path=/
+    - PHPSESSID=mCAY-U%2CCKa3g3iJYzgFWs1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 11:04:30 GMT
+recorded_at: Tue, 14 Aug 2018 00:25:21 GMT
