--- a/www.nass.gov.ng/17e25ebcc79e18b2523bfe9aacc21668b56c649f.yml
+++ b/www.nass.gov.ng/17e25ebcc79e18b2523bfe9aacc21668b56c649f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 11:09:29 GMT
+    - Tue, 14 Aug 2018 00:30:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=H25BYM5Si4S0I5qd%2Cpt%2CU0; path=/
+    - PHPSESSID=JaCcKbvLQk2fELPbt7MFF1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 11:09:29 GMT
+recorded_at: Tue, 14 Aug 2018 00:30:38 GMT
