--- a/www.nass.gov.ng/640f5adc93a7527e2e8442f2f1134d63591250b7.yml
+++ b/www.nass.gov.ng/640f5adc93a7527e2e8442f2f1134d63591250b7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 11:17:10 GMT
+    - Tue, 14 Aug 2018 00:38:26 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=TrArCJA1RNZlbq5xK0iq01; path=/
+    - PHPSESSID=q6N0%2CUc9qc8Z3EoR-NoLm3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 11:17:10 GMT
+recorded_at: Tue, 14 Aug 2018 00:38:27 GMT
