--- a/www.nass.gov.ng/0d9cf26431edf7817d91f5d203ab69208b8e99a3.yml
+++ b/www.nass.gov.ng/0d9cf26431edf7817d91f5d203ab69208b8e99a3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 11:22:10 GMT
+    - Tue, 14 Aug 2018 00:43:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=s8OnnXDuetZaqTSyzG7JF0; path=/
+    - PHPSESSID=TFgnm0FAMl77p%2CsCoPCLC1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 11:22:10 GMT
+recorded_at: Tue, 14 Aug 2018 00:43:43 GMT
