--- a/www.nass.gov.ng/3f430700cdfde221dcd37c85248f634a31a4b566.yml
+++ b/www.nass.gov.ng/3f430700cdfde221dcd37c85248f634a31a4b566.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 11:30:29 GMT
+    - Tue, 14 Aug 2018 00:52:05 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=IocX6%2CBHa7zTILlIANxph0; path=/
+    - PHPSESSID=lSriHkFR%2CNlfafTH0xEXz3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 11:30:29 GMT
+recorded_at: Tue, 14 Aug 2018 00:52:05 GMT
