--- a/www.nass.gov.ng/96b28f6b0a4bf463c4457f5424c10dfc6b655a2a.yml
+++ b/www.nass.gov.ng/96b28f6b0a4bf463c4457f5424c10dfc6b655a2a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 11:34:10 GMT
+    - Tue, 14 Aug 2018 00:55:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=-pqNM3fpjH9MW%2CVIVOhOs3; path=/
+    - PHPSESSID=3Go3wtiizQetDGo45K5Lz0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 11:34:10 GMT
+recorded_at: Tue, 14 Aug 2018 00:55:56 GMT
