--- a/www.nass.gov.ng/74d2b162bdaf3e0d3bb34230c493c4cd2e92a87b.yml
+++ b/www.nass.gov.ng/74d2b162bdaf3e0d3bb34230c493c4cd2e92a87b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 11:38:26 GMT
+    - Tue, 14 Aug 2018 01:01:22 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=XcsO0vsGmgSvdDdoMBdkR3; path=/
+    - PHPSESSID=WOnO4j%2C-MXM1rtN1ntcvN1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 11:38:27 GMT
+recorded_at: Tue, 14 Aug 2018 01:01:22 GMT
