--- a/www.nass.gov.ng/ba44717727b2e6bde15fe89118e540f291b36905.yml
+++ b/www.nass.gov.ng/ba44717727b2e6bde15fe89118e540f291b36905.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 11:44:58 GMT
+    - Tue, 14 Aug 2018 01:07:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=2RCIdHBCuNbex%2CE5g8EpM1; path=/
+    - PHPSESSID=ainAmoyphPFf1es4LweOU2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 11:44:58 GMT
+recorded_at: Tue, 14 Aug 2018 01:07:56 GMT
