--- a/www.nass.gov.ng/12a53d17a2982f5a1cb7a2162a18dae218fbb586.yml
+++ b/www.nass.gov.ng/12a53d17a2982f5a1cb7a2162a18dae218fbb586.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 11:50:43 GMT
+    - Tue, 14 Aug 2018 01:14:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=IXtR6WBe6UgqrpYk3d5l01; path=/
+    - PHPSESSID=yA%2CTGfY0FebeadTN31rfy1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 11:50:44 GMT
+recorded_at: Tue, 14 Aug 2018 01:14:38 GMT
