--- a/www.nass.gov.ng/c3f70976e27eaf187447a421ab944e670222e769.yml
+++ b/www.nass.gov.ng/c3f70976e27eaf187447a421ab944e670222e769.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 11:53:55 GMT
+    - Tue, 14 Aug 2018 01:17:59 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=HhC%2CTnYCHble7DBeBR1UY3; path=/
+    - PHPSESSID=rfTDQL1wQwXal-EEZ9CL30; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 11:53:56 GMT
+recorded_at: Tue, 14 Aug 2018 01:18:00 GMT
