--- a/www.nass.gov.ng/cf99f32128063828c04489890e66eb7aa915b704.yml
+++ b/www.nass.gov.ng/cf99f32128063828c04489890e66eb7aa915b704.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 11:54:45 GMT
+    - Tue, 14 Aug 2018 01:18:50 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=OYySEK708AdikHcplkWSF3; path=/
+    - PHPSESSID=KXnNlezrSqg6M4lZHXp%2Cg2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 11:54:45 GMT
+recorded_at: Tue, 14 Aug 2018 01:18:50 GMT
