--- a/www.nass.gov.ng/dea4b275aefe41f0c8b7edeb8447be56b2fd6472.yml
+++ b/www.nass.gov.ng/dea4b275aefe41f0c8b7edeb8447be56b2fd6472.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 11:59:44 GMT
+    - Tue, 14 Aug 2018 01:23:32 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=xjZ9b%2C5ayMB8bmUdh3-wp0; path=/
+    - PHPSESSID=Qb%2CQrVmlxCpP6o%2Cw%2CjaJd0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 11:59:44 GMT
+recorded_at: Tue, 14 Aug 2018 01:23:33 GMT
