--- a/www.nass.gov.ng/273a61ff09ac63e000de6a30a1e5cda87a80dffd.yml
+++ b/www.nass.gov.ng/273a61ff09ac63e000de6a30a1e5cda87a80dffd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 12:01:09 GMT
+    - Tue, 14 Aug 2018 01:24:22 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=1eWW-N4r0TiwZZvSBS-jN1; path=/
+    - PHPSESSID=mHCIP7jrIn3WYYq%2COObpL3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 12:01:10 GMT
+recorded_at: Tue, 14 Aug 2018 01:24:22 GMT
