--- a/www.nass.gov.ng/6f8c389e05555490f1a4efd847f8add7fea396a0.yml
+++ b/www.nass.gov.ng/6f8c389e05555490f1a4efd847f8add7fea396a0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 12:02:33 GMT
+    - Tue, 14 Aug 2018 01:25:11 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=WNWAZ8bICpBOEO1oOdfqQ1; path=/
+    - PHPSESSID=M5GPC2BJ8eYPfUofcm9k%2C2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 12:02:34 GMT
+recorded_at: Tue, 14 Aug 2018 01:25:12 GMT
