--- a/www.nass.gov.ng/2216f520261a809623e049dfed0bf8b43751146a.yml
+++ b/www.nass.gov.ng/2216f520261a809623e049dfed0bf8b43751146a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 12:10:40 GMT
+    - Tue, 14 Aug 2018 01:30:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=m0hOhXrsFoJ%2Cl3MmYCzg13; path=/
+    - PHPSESSID=%2CkmMONvUm2tQD%2C9lllPNp1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 12:10:40 GMT
+recorded_at: Tue, 14 Aug 2018 01:30:29 GMT
