--- a/www.nass.gov.ng/4e9e61694f8c7278e7538b5943ef908229329599.yml
+++ b/www.nass.gov.ng/4e9e61694f8c7278e7538b5943ef908229329599.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 12:25:07 GMT
+    - Tue, 14 Aug 2018 01:43:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=XsTSl%2CUpgC1LmUQZ--RT%2C2; path=/
+    - PHPSESSID=xA%2CJxRgcHHew4YcdGaVtD1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 12:25:08 GMT
+recorded_at: Tue, 14 Aug 2018 01:43:38 GMT
