--- a/www.nass.gov.ng/dd7506a8150779c55761e54ca99439a5deebef07.yml
+++ b/www.nass.gov.ng/dd7506a8150779c55761e54ca99439a5deebef07.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 12:32:08 GMT
+    - Tue, 14 Aug 2018 01:55:10 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=VhmIvPp-4nh2UC1d6oAlB2; path=/
+    - PHPSESSID=GKl72edXnWou2%2CQU2MfM01; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 12:32:09 GMT
+recorded_at: Tue, 14 Aug 2018 01:55:10 GMT
