--- a/www.nass.gov.ng/f9b74161cefbb16526b1ba09a715bf2792c977f1.yml
+++ b/www.nass.gov.ng/f9b74161cefbb16526b1ba09a715bf2792c977f1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 12:33:39 GMT
+    - Tue, 14 Aug 2018 01:56:04 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=xs3BgQ4RhgZCurvJpFVuX0; path=/
+    - PHPSESSID=QQARC5pm%2CO2M7DxJmfMN%2C1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 12:33:39 GMT
+recorded_at: Tue, 14 Aug 2018 01:56:04 GMT
