--- a/www.nass.gov.ng/51b904263217ceb0be280a410e1c4da3e290fc31.yml
+++ b/www.nass.gov.ng/51b904263217ceb0be280a410e1c4da3e290fc31.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 12 Aug 2018 12:45:52 GMT
+    - Tue, 14 Aug 2018 02:09:15 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=yyZLSvPgAlZDEtWFre1VA2; path=/
+    - PHPSESSID=H8%2CiPfuqxxBBnG9JzzO2N0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 12 Aug 2018 12:45:52 GMT
+recorded_at: Tue, 14 Aug 2018 02:09:15 GMT
