--- a/www.nass.gov.ng/0910d604db86e85613518695dd6e712e26baeb66.yml
+++ b/www.nass.gov.ng/0910d604db86e85613518695dd6e712e26baeb66.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 18:23:24 GMT
+    - Wed, 15 Aug 2018 13:29:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=RULsZvJTIBalZfA43VA1s3; path=/
+    - PHPSESSID=cBUBVvrTKSv%2CBFFatLEe40; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 18:23:25 GMT
+recorded_at: Wed, 15 Aug 2018 13:29:33 GMT
