--- a/www.nass.gov.ng/1c2d95329d2716f9b0f7a3851c246b13bd23e8ce.yml
+++ b/www.nass.gov.ng/1c2d95329d2716f9b0f7a3851c246b13bd23e8ce.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 18:35:07 GMT
+    - Wed, 15 Aug 2018 13:41:25 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=10Fb3ctJ2wjsc1GaoTc%2CW1; path=/
+    - PHPSESSID=-rsaj9T7wHiJ2HQb5PKs43; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 18:35:07 GMT
+recorded_at: Wed, 15 Aug 2018 13:41:26 GMT
