--- a/www.nass.gov.ng/8b717662351853ca45fa91605b445d8b0b6184e9.yml
+++ b/www.nass.gov.ng/8b717662351853ca45fa91605b445d8b0b6184e9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 18:40:47 GMT
+    - Wed, 15 Aug 2018 13:48:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=fGLf%2Cnu2iKveMBmKEGxi-1; path=/
+    - PHPSESSID=zhckHkHy5swwVz1hboVmT3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 18:40:47 GMT
+recorded_at: Wed, 15 Aug 2018 13:48:52 GMT
