--- a/www.nass.gov.ng/344e5756757d45943824292ba6d2542fb0fe5d32.yml
+++ b/www.nass.gov.ng/344e5756757d45943824292ba6d2542fb0fe5d32.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 18:55:02 GMT
+    - Wed, 15 Aug 2018 14:02:18 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=eA7yJsV7SticT%2CRuE3zRY1; path=/
+    - PHPSESSID=OGMEzzz9VrpIErBMOwARV0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 18:55:02 GMT
+recorded_at: Wed, 15 Aug 2018 14:02:18 GMT
