--- a/www.nass.gov.ng/02417b3ce5d2d8778ffc6042a1be6a87e91bd6a7.yml
+++ b/www.nass.gov.ng/02417b3ce5d2d8778ffc6042a1be6a87e91bd6a7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 18:55:45 GMT
+    - Wed, 15 Aug 2018 14:03:02 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=guG%2C1oCglVRhWItYWX7e72; path=/
+    - PHPSESSID=r11C%2CfSrGZrv3tkOoCyiv3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 18:55:45 GMT
+recorded_at: Wed, 15 Aug 2018 14:03:02 GMT
