--- a/www.nass.gov.ng/e2d98f97c0c42e2cc4c0dfe2f12654586f9766b5.yml
+++ b/www.nass.gov.ng/e2d98f97c0c42e2cc4c0dfe2f12654586f9766b5.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 19:07:51 GMT
+    - Wed, 15 Aug 2018 14:15:21 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Q2UnWYdX7W%2C9G7BagsRBT3; path=/
+    - PHPSESSID=DIfNv1jUPeGi1546iWZwF3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 19:07:52 GMT
+recorded_at: Wed, 15 Aug 2018 14:15:21 GMT
