--- a/www.nass.gov.ng/63104e00748eb9727ef4d88413bcd86a720c42b0.yml
+++ b/www.nass.gov.ng/63104e00748eb9727ef4d88413bcd86a720c42b0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 19:14:26 GMT
+    - Wed, 15 Aug 2018 14:20:35 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=3R%2C5bQhmMux%2CBALDoMOLK3; path=/
+    - PHPSESSID=Cxpo0Zfc3Pg-Dp3TJFE092; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 19:14:26 GMT
+recorded_at: Wed, 15 Aug 2018 14:20:36 GMT
