--- a/www.nass.gov.ng/ec5bb3bcb8148ddc47cdad5b7eaca964328f2e2e.yml
+++ b/www.nass.gov.ng/ec5bb3bcb8148ddc47cdad5b7eaca964328f2e2e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 19:18:34 GMT
+    - Wed, 15 Aug 2018 14:24:01 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=L5mC0p23-Rysp01ii%2C9jR1; path=/
+    - PHPSESSID=Sf7GavwVgZs3oLBVfrAtH1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 19:18:34 GMT
+recorded_at: Wed, 15 Aug 2018 14:24:01 GMT
